// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag overview 1`] = `
<DocumentFragment>
  <span
    class="css-15dvo6t-Tag"
  >
    <span
      class="css-vurnku"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;

exports[`Tag twilwindArrayColors 1`] = `
<DocumentFragment>
  <span
    class="css-1t9ofat-Tag"
  >
    <span
      class="css-vurnku"
    >
      some text
    </span>
  </span>
</DocumentFragment>
`;
